# API.yaml
@@ -298,7 +298,7 @@ paths:
                   type: string
                   description: track containing items
                 item:
-                  type: string
+                  type: number
                   description: index of track item
                 filter:
                   type: string
@@ -353,7 +353,7 @@ paths:
                   type: string
                   description: track containing items
                 item:
-                  type: string
+                  type: number
                   description: index of track item
                 filter:
                   type: string
@@ -490,7 +490,7 @@ paths:
       tags:
         - item
       summary: Remove item from timeline
-      deprecated: true
+      operationId: projectItemDELETE
       parameters:
         - name: projectID
           in: path
@@ -507,7 +507,7 @@ paths:
                   type: string
                   description: track containing items
                 item:
-                  type: string
+                  type: number
                   description: index of track item
         required: true
       responses:
@@ -554,7 +554,7 @@ paths:
                   type: string
                   description: destination track
                 item:
-                  type: string
+                  type: number
                   description: index of track item
                 time:
                   type: string
@@ -607,7 +607,7 @@ paths:
                   type: string
                   description: track containing items
                 item:
-                  type: string
+                  type: number
                   description: index of track item
                 time:
                   type: string
@@ -632,7 +632,101 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-
+  /project/{projectID}/track:
+    post:
+      tags:
+        - track
+      summary: Add track
+      operationId: projectTrackPOST
+      parameters:
+        - name: projectID
+          in: path
+          description: project ID
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              properties:
+                type:
+                  type: string
+                  description: Type of track (video/audio).
+        required: true
+      responses:
+        200:
+          description: Track created.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  project:
+                    type: string
+                    description: ID of new track.
+        404:
+          description: Project not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        400:
+          description: Bad request, missing type parameter (video/audio).
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+    delete:
+      tags:
+        - track
+      summary: Remove track
+      operationId: projectTrackDELETE
+      parameters:
+        - name: projectID
+          in: path
+          description: project ID
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              properties:
+                track:
+                  type: string
+                  description: Track ID.
+        required: true
+      responses:
+        200:
+          description: Track removed.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  project:
+                    type: string
+                    description: ID of new track.
+        403:
+          description: Unable to remove, track is not empty.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        404:
+          description: Project not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        400:
+          description: Bad request, missing track parameter.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 components:
   schemas:
     ErrorResponse:
